--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,36 @@
+[metadata]
+name = datasci
+version = 0.0.2
+author = Christopher Brown
+author_email = io@henrian.com
+url = https://github.com/chbrown/datasci-python
+description = Data science utilities
+classifiers =
+  Development Status :: 1 - Planning
+  Intended Audience :: Science/Research
+  Programming Language :: Python
+  Topic :: Scientific/Engineering
+long_description = file: README.md
+long_description_content_type = text/markdown
+license = MIT
+
+[options]
+packages = find:
+python_requires = >=3.6
+install_requires =
+  altair>=2.2
+  cytoolz>=0.8
+  ipython>=6.5
+  markdown>=2.6
+  numpy>=1.15
+  pandas>=0.23
+  scipy>=1.1
+  statsmodels>=0.9
+setup_requires =
+  pytest-runner
+tests_require =
+  pytest
+  pytest-cov
+
 [aliases]
 test=pytest
