Add coverage to default test suite call

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,4 +33,9 @@ tests_require =
   pytest-cov
 
 [aliases]
-test=pytest
+test = pytest
+
+[tool:pytest]
+addopts =
+  --cov=datasci
+  --cov-branch
