--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ install_requires =
   markdown>=2.6
   numpy>=1.15
   pandas>=0.23
+  pyperclip>=1.7.0
   scipy>=1.1
   statsmodels>=0.9
 setup_requires =
