Integrate smart_open

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
   pandas>=0.23
   pyperclip>=1.7.0
   scipy>=1.1
+  smart_open>=1.8.1
   statsmodels>=0.9
 setup_requires =
   pytest-runner
