Integrate setuptools-scm
I.e., derive version from git tag(s)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = datasci
-version = 0.3.1
 author = Christopher Brown
 author_email = io@henrian.com
 url = https://github.com/chbrown/datasci-python
@@ -30,6 +29,7 @@ install_requires =
   statsmodels>=0.9
 setup_requires =
   pytest-runner
+  setuptools-scm
 tests_require =
   pytest
   pytest-cov
