--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ setup_requires =
   setuptools-scm
 tests_require =
   pytest
+  pytest-black
   pytest-cov
 
 [aliases]
@@ -39,6 +40,7 @@ test = pytest
 
 [tool:pytest]
 addopts =
+  --black
   --cov=datasci
   --cov-branch
 
